--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -32,7 +32,7 @@ XML2_jll = "02c8fc9c-b97f-50b9-bbe4-9be30ff0a78a"
 [compat]
 AlgebraOfGraphics = "0.8, 0.9, 0.10, 0.11"
 BSplineKit = "0.16, 0.17, 0.18, 0.19"
-CairoMakie = "0.11, 0.12, 0.13"
+CairoMakie = "0.11, 0.12, 0.13, 0.14, 0.15"
 Colors = "0.12, 0.13"
 Makie = "0.21, 0.22, 0.23, 0.24"
 UnfoldSim = "0.4, 0.5"
